[package]
name = "spam-can"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytecheck = "0.6.9"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.26.1"
futures = "0.3.25"
ndhistogram = "0.8.0"
plotters = "0.3.4"
reqwest = { version = "0.11.13", features = ["serde_json"] }
rkyv = { version = "0.7.39", features = ["validation"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.0", features = ["full"] }
tokio-stream = "0.1.11"
toml = "0.7.3"
tower = { version = "0.4.13", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

# required for compliance
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.55", features = ["vendored"] }
